# rind

./: .env.example  .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: Rind.icns  Rind.rc  RindEngine.cmake  copy_if_release.cmake  embed_asset.py  generate_registry.py  linux_bundle_runtime.cmake.in  macos_bundle_runtime.cmake.in  package.cmake  zig-toolchain.cmake
controller_config/: game_actions_4412940.vdf  neptune_default.vdf  ps4_default.vdf  ps5_default.vdf  xbox_default.vdf
include/engine/: AudioManager.h  Camera.h  CharacterEntity.h  Collider.h  EmbeddedAssets.h  EntityManager.h  InputManager.h  IrradianceManager.h  IrradianceProbe.h  Light.h  LightManager.h  ModelManager.h  ParticleManager.h  Platform.h  PushConstants.h  Renderer.h  SIMD.h  SceneManager.h  SettingsManager.h  ShaderManager.h  SpatialGrid.h  TextureManager.h  ThreadPool.h  UIManager.h  VolumetricManager.h  io.h
include/game/: GameInstance.h
include/rind/: BashingBoss.h  BashingEnemy.h  CharacterEntity.h  Enemy.h  EnemySpawner.h  FlyingBoss.h  FlyingEnemy.h  GameInstance.h  Grenade.h  GrenadeBoss.h  Missile.h  Player.h  ScoreCounter.h  SlowBullet.h  StatusEffect.h  WalkingEnemy.h
src/: main.cpp
src/assets/models/: bashingenemy.glb  enemy-head.glb  enemy.glb  flyingenemy.glb  groundblock-collider.glb  groundblock.glb  groundcubes.glb  groundplatform-collider.glb  groundplatform.glb  lasergun.glb  light.glb  robot-arm.glb  robot-visible.glb  slowbullet.glb  trueground.glb  walls.glb
src/assets/shaders/glsl/: text.frag  ui.frag  ui.vert
src/assets/shaders/hlsl/: ao.comp.hlsl  ao.frag.hlsl  bloom.frag.hlsl  bloomdown.frag.hlsl  bloomup.frag.hlsl  blur.frag.hlsl  blurarray.comp.hlsl  combine.frag.hlsl  composite.frag.hlsl  composite.vert.hlsl  gbuffer.frag.hlsl  gbuffer.vert.hlsl  hblur.frag.hlsl  irradiance.frag.hlsl  irradiance.vert.hlsl  lighting.frag.hlsl  lighting.vert.hlsl  particle.frag.hlsl  particle.vert.hlsl  particlesimple.comp.hlsl  particlesimple.frag.hlsl  particlesimple.vert.hlsl  sh.comp.hlsl  shadow.frag.hlsl  shadow.vert.hlsl  shadowimage.comp.hlsl  shreduce.comp.hlsl  smaaBlend.frag.hlsl  smaaEdge.frag.hlsl  smaaWeight.frag.hlsl  ssao.frag.hlsl  ssr.frag.hlsl  text.frag.hlsl  text.vert.hlsl  ui.frag.hlsl  ui.vert.hlsl  vblur.frag.hlsl  volumetric.frag.hlsl  volumetric.vert.hlsl
src/engine/: AudioManager.cpp  CharacterEntity.cpp  Collider.cpp  EntityManager.cpp  InputManager.cpp  IrradianceManager.cpp  IrradianceProbe.cpp  Kernels.ispc  Light.cpp  LightManager.cpp  ModelManager.cpp  ParticleManager.cpp  Platform.cpp  Platform_macOS.mm  Renderer.cpp  SIMD.cpp  SceneManager.cpp  ShaderManager.cpp  SpatialGrid.cpp  TextureManager.cpp  ThreadPool.cpp  UIManager.cpp  VolumetricManager.cpp  kernels.ispc
src/engine/assets/shaders/hlsl/: bloom.frag.hlsl  bloomdown.frag.hlsl  bloomup.frag.hlsl  combine.frag.hlsl  composite.frag.hlsl  flare.frag.hlsl  gbuffer.frag.hlsl  gbuffer.vert.hlsl  lighting.frag.hlsl  particle.frag.hlsl  rect.vert.hlsl  shadow.vert.hlsl  shadowimage.comp.hlsl  shreduce.comp.hlsl  smaaWeight.frag.hlsl  volumetric.vert.hlsl
src/game/: GameInstance.cpp
src/rind/: BashingBoss.cpp  BashingEnemy.cpp  CharacterEntity.cpp  Enemy.cpp  FlyingBoss.cpp  FlyingEnemy.cpp  GameInstance.cpp  GrenadeBoss.cpp  LeaderboardWindow.cpp  MissileBoss.cpp  Player.cpp  SlowBullet.cpp  SteamInput.cpp  SteamManager.cpp  WalkingEnemy.cpp
src/rind/include/rind/: BashingBoss.h  BashingEnemy.h  CharacterEntity.h  Enemy.h  EnemySpawner.h  FlyingBoss.h  FlyingEnemy.h  GameAction.h  GameInstance.h  GamepadBindings.h  Grenade.h  GrenadeBoss.h  LeaderboardWindow.h  Missile.h  MissileBoss.h  Player.h  ScoreCounter.h  SlowBullet.h  StatusEffect.h  SteamInput.h  SteamManager.h  TempTrigger.h  WalkingEnemy.h
